rust/macros/tests/invalid/target/debug/deps/leading_comma-e7f3fd8c6a6b3b6b.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma-e7f3fd8c6a6b3b6b.d: leading_comma.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libleading_comma-e7f3fd8c6a6b3b6b.rmeta: leading_comma.rs Cargo.toml

leading_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
